Resolves: tdf#92117 create only one Undo for all UnmergeCells() calls

... during DeleteCells() and InsertCells(), instead of one Undo per
UnmergeCells() call. And actually create Undo only if bRecord requested.

Change-Id: I4f1747c3f42f36e16be81f989f0af5d048ba9d9f